k8s/expose-grafana-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: monitoring
spec:
  rules:   
    - host: grafana.testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: prometheus-grafana
              servicePort: 80
            path: /
  tls:
    - hosts:
        - grafana.testmylms.ddns.net
      secretName: openedx
