k8s/expose-ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: openedx
spec:
  rules:   
    - host: testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
    - host: studio.testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
    - host: preview.testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
    - host: ecommerce.testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
    - host: discovery.testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
    - host: mfe.testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
    - host: minio.testmylms.ddns.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - testmylms.ddns.net
        - studio.testmylms.ddns.net
        - preview.testmylms.ddns.net
      secretName: openedx
